longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/auth-type: forward
    traefik.ingress.kubernetes.io/auth-url: https://keycloak.juny.me/auth/realms/juny/protocol/openid-connect/auth?response_type=code&client_id=longhorn
    # traefik.ingress.kubernetes.io/auth-url: https://keycloak.juny.me/auth/realms/juny/protocol/openid-connect/auth
    traefik.ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  rules:
    - host: longhorn.juny.me
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - longhorn.juny.me
      secretName: longhorn-dashboard-tls
